--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <style>
+
+    .bar rect {
+      fill: steelblue;
+    }
+
+    .bar text {
+      fill: #fff;
+      font: 10px sans-serif;
+    }
+
+    .price rect {
+      fill: rgb(228,26,28);
+    }
+
+    .stretched rect {
+      fill: rgb(55,126,184);
+    }
+
+    .hands rect {
+      fill: rgb(77,175,74);
+    }
+
+    .nest rect {
+      fill: rgb(152,78,163);
+    }
+
+    .country rect {
+      fill: rgb(255,127,0);
+    }
+
+    .solid rect {
+      fill: rgb(255,255,51);
+    }
+
+    .full rect {
+      fill: rgb(166,86,40);
+    }
+
+    .getting rect {
+      fill: rgb(247,129,191);
+    }
+
+    </style>
     <title>Recruitment Application</title>
 
 </head>
@@ -12,6 +56,12 @@
     <div id="viz">
         <ul></ul>
     </div>
+
+    <div id='test'>
+      <ul></ul>
+    </div>
+
+    <div id='bar'></div>
 
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script>
@@ -24,6 +74,72 @@
                 .enter()
                 .append("li")
                 .text(function(d) { return d.gender + ": " + d.max_income; });
+        });
+
+        let margin = {top: 20, right: 20, bottom: 30, left: 40},
+          width = 960 - margin.left - margin.right,
+          height = 500 - margin.top - margin.bottom;
+
+        let svg = d3.select('#bar').append('svg')
+            .attr("width", width + margin.left + margin.right)
+            .attr("height", height + margin.top + margin.bottom)
+          .append("g")
+            .attr("transform",
+                "translate(" + margin.left + "," + margin.top + ")");
+
+        d3.json('/api/econ_api', function(json){
+
+          // economic_stability = [];
+          // json.data.forEach(function(d){
+          //   economic_stability.push(+d.economic_stability)
+          // });
+
+          // console.log(economic_stability);
+
+          // let counts = [], economic_stability = [];
+          //
+          // json.data.forEach(function(d){
+          //   economic_stability.push(d.economic_stability);
+          //   counts.push(d.cnt)
+          // });
+
+          console.log(json);
+
+          let x = d3.scaleBand()
+            .range([0, width])
+            .domain(json.econ)
+            .padding(0.1);
+
+          let y = d3.scaleLinear()
+            .range([height, 0])
+            .domain([0, json.max_y]);
+
+          svg.selectAll('.price')
+            .data(json.data)
+            .enter().append('rect')
+              .attr('class', 'price')
+              .attr('x', function(d){ return x(d.economic_stability)})
+              .attr('width', x.bandwidth())
+              .attr('y', function(d){ return y(d['Price Isn\'t Primary'])})
+              .attr('height', function(d){ return height - y(d['Price Isn\'t Primary'])})
+
+          svg.selectAll('.stretched')
+            .data(json.data)
+            .enter().append('rect')
+              .attr('class', 'stretched')
+              .attr('x', function(d){ return x(d.economic_stability)})
+              .attr('width', x.bandwidth())
+              .attr('y', function(d){ return y(d['Stretched Singles'])})
+              .attr('height', function(d){ return height - y(d['Stretched Singles'])})
+
+          svg.append('g')
+            .attr('transform', 'translate(0,' + height + ')')
+            .call(d3.axisBottom(x));
+
+          svg.append('g')
+            .call(d3.axisLeft(y));
+
+
         });
 
     </script>
