working, commit prior to grid

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="https://codepen.io/chriddyp/pen/bWLwgP.css">
     <style>
 
     .price {
@@ -57,6 +58,12 @@
         font: 12px sans-serif;
         padding: 5px;
         text-align: center;
+
+    }
+
+    .legend-text, .axis-label{
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 10px;
     }
 
     </style>
@@ -69,10 +76,6 @@
     <h2>Max Income</h2>
     <div id="viz">
         <ul></ul>
-    </div>
-
-    <div id='test'>
-      <ul></ul>
     </div>
 
     <div id='bar'></div>
