--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,8 @@
       stability because we're looking at a large number of ordinal values.
       Bars help to define the order, and by representing values allow us to
       also view the overall distribution of records across economic stability.</p>
-    <p>Normalizing the data would make it a bit easier to view the effects, but
+    <p>Normalizing the data (each category out of 100%) would make it a bit easier
+      to view the effects, but
       I think the tradeoff in this case is worth it. Relationships between segments
       and economic stability are still clear (for example, it's easy to see
       "Stretched Singles" have higher econoimc stability than "Solid Suburbans")</p>
