adding recent changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,11 +71,11 @@
     }
 
     </style>
-    <title>Recruitment Application</title>
+    <title>DATA 608 Example</title>
 
 </head>
 <body>
-    <h1>Recruitment Application</h1>
+    <h1>Insurance Data EDA</h1>
 
     <h2>Max Income</h2>
     <div id="viz">
